[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/Spritesheets/Portal2D_TItle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Play_Title.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Quit_Title.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Quit_Title_Hover.png" type="Texture" id=5]
[ext_resource path="res://Sprites/LevelSelect_Title.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Play_Title_Hover.png" type="Texture" id=7]
[ext_resource path="res://Sprites/LevelSelect_Title_Hover.png" type="Texture" id=8]
[ext_resource path="res://Audio/deepblue.mp3" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 704, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 704, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 704, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 704, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 704, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 400, 704, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 704, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 560, 704, 80 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 640, 704, 80 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 720, 704, 80 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 800, 704, 80 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 880, 704, 80 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 317.333, 121.621 )
scale = Vector2( 0.810957, 0.870218 )
frames = SubResource( 13 )
frame = 7
playing = true

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 38.0
margin_top = 178.0
margin_right = 806.0
margin_bottom = 580.0
rect_scale = Vector2( 0.3, 0.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="Buttons"]
margin_right = 768.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 7 )

[node name="Level_Select" type="TextureButton" parent="Buttons"]
visible = false
margin_top = 68.0
margin_right = 768.0
margin_bottom = 132.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 8 )

[node name="Quit" type="TextureButton" parent="Buttons"]
margin_top = 68.0
margin_right = 768.0
margin_bottom = 132.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
autoplay = true

[connection signal="button_down" from="Buttons/Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="Buttons/Level_Select" to="." method="_on_Level_Select_button_down"]
[connection signal="button_down" from="Buttons/Quit" to="." method="_on_Quit_button_down"]
